# poetry_demo

./: .gitignore  pyproject.toml
.github/workflows/: main.yml
src/my_package/: calc.py
src/tests/: test_example.py
