[tool.poetry]
name = "my_package"
version = "0.1"
description = "a simple package to learn poetry."
authors = ["supreet <supreet.shm523@gmail.com>"]
license = "MIT"
readme = "README.md"
packages=[{include="my_package", from="src"}]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
